[gd_scene load_steps=4 format=3 uid="uid://be2ometqfylui"]

[ext_resource type="Script" uid="uid://cdkl7mlitjsih" path="res://assets/spitter/spitter.gd" id="1_egaq4"]
[ext_resource type="SpriteFrames" uid="uid://m8gn8xncnu26" path="res://assets/spitter/spitter.tres" id="2_egaq4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqeta"]
size = Vector2(60.0625, 107.758)

[node name="Spitter" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_egaq4")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_egaq4")
animation = &"Attacking"
frame = 3
frame_progress = 0.641438
offset = Vector2(-5, -64)

[node name="VisionArea" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="VisionArea"]
position = Vector2(0, -54)
shape = SubResource("RectangleShape2D_qqeta")
debug_color = Color(1, 0.0117647, 0.0117647, 0.333333)

[node name="AttackArea" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -54)
shape = SubResource("RectangleShape2D_qqeta")
debug_color = Color(1, 0.0117647, 0.0117647, 0.333333)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -47.0
offset_top = -128.0
offset_right = 47.0
offset_bottom = -110.0
max_value = 1.0
value = 1.0
show_percentage = false

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -54)
shape = SubResource("RectangleShape2D_qqeta")

[node name="StateTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="BulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(27, -54)

[node name="BulletHitPoint" type="Marker2D" parent="."]
position = Vector2(0, -54)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_vision_area_body_exited"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
